--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 		}
 
 		updateTable();
+
+		window.addEventListener('DOMContentLoaded', function() {
+			document.getElementById('user-input').focus();
+		});
 	</script>
 </body>
 </html>
